# crypto-ai-bot

./: .dockerignore  .env  .env.example  .gitignore  .gitignore.txt  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  Dockerfile  Makefile  Procfile  Procfile - Kopya  README.md  Security.md  a1_fallback_report.csv  a2_ports_audit_report.csv  ai_model.py  app.py  app.py.py  apt-packages  check_compatibility.py  closed_trades.csv  config.py  crypto.db  data_logger.py  docker-compose.yml  env.example  error_chart.py  error_logger.py  final_cleanup.ps1  fix_encoding.py  generate_model.py  generate_realistic_csv.py  grafik_olusturucu.py  importlinter.ini  log_cleaner.py  main.py  main.py.py  main_new.py  models  (+27 more)
.github/workflows/: RUNBOOK.md  ci.yml  import-linter.yml  mypy.ini  release.yml  ruff.toml  tests.yml
_backup_old_structure/src/core/: bot.py
_backup_old_structure/src/io/: csv_handler.py
_backup_old_structure/src/ml/: adaptive_model.py
_backup_old_structure/src/trading/: paper_store.py
_backup_old_structure/src/utils/: integration_check.py
_unmatched_files/: reorganize_structure.py
_unmatched_files/tools/: legacy_main.py
analysis/: market_analyzer.py  scoring_engine.py  scoring_engine.py.py  technical_indicators.py  technical_indicators.py.py
config/: settings.py  settings.py.py
core/: decorators.py  exceptions.py  state_manager.py  state_manager.py.py
data/: bot.sqlite3
docs/: metrics.md
ml/: adaptive_model.py
models/: ai_model.pkl
ops/prometheus/: README.md  alertmanager.yml  alerts.yml  docker-compose.yml  prometheus.yml  rules.yml
scripts/: README.md  arch_check.py  arch_smoke.py  backtest_cli.py  backtest_csv.py  backup_db.py  check_architecture.sh  csv_utils.py  health_monitor.py  integrity_check.py  maintenance_cli.py  performance_report.py  protective_exits.py  reconciler.py  rotate_backups.py  run_server.ps1  run_server.sh  smoke_migrations.py  smoke_paper.sh  test_architecture.py
src/analysis/: scoring_engine.py
src/app/: health.py  server.py
src/context/market/: correlation.py  dxy_index.py  fear_greed.py
src/core/: orchestrator.py  scheduler.py
src/crypto_ai_bot/: __init__.py
src/crypto_ai_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/crypto_ai_bot/alerts/: reconcile_stale.py
src/crypto_ai_bot/analysis/: indicators.py  market_analyzer.py  scoring_engine.py  signal_aggregator.py  technical_indicators.py
src/crypto_ai_bot/analytics/: metrics.py  pnl.py
src/crypto_ai_bot/app/: __init__.py  bus_wiring.py  compose.py  db_backup.py  e2e_smoke.py  health.py  logging_bootstrap.py  maintenance.py  middleware.py  migrate_repair.py  server.py  smoke.py  telegram_alerts.py  telegram_bot.py
src/crypto_ai_bot/backtest/: csv_loader.py  dataloader.py  engine.py  runner.py
src/crypto_ai_bot/cli/: __init__.py  health_monitor.py  maintenance.py  performance.py  reconcile.py  smoke.py
src/crypto_ai_bot/config/: settings.py
src/crypto_ai_bot/context/: snapshot.py
src/crypto_ai_bot/core/: _time.py  alerts.py  bot.py  database.py  decorators.py  events.py  (+6 more)
src/utils/: http_client.py  trading_metrics.py
telegram/: bot_handler.py  bot_handler.py.py  commands.py
tests/: commands.py  conftest.py  scoring_engine.py  test_ai_model_meta_fallback.py  test_cache_ttl.py  test_ccxt_market_data_parse.py  test_config_settings_ext.py  test_core_decorators_ext.py  test_csv_handler.py  test_exchange_cache_compat.py  test_feature_pipeline_indicators.py  test_fusion_thresholds.py  test_integration_check_module.py  test_market_analyzer.py  test_monitoring_module.py  test_regime_detector_smoke.py  test_risk_manager.py  test_simple_position_manager.py  test_state_manager.py  test_strategy_manager_contract.py  test_technical_indicators.py  test_timeframes_adaptive.py  test_timeframes_weighted_average.py  test_trading_metrics_module.py  test_unified_cache_manager.py  test_utils_integration_check.py  test_utils_monitoring.py  test_utils_monitoring_ext.py  test_utils_trading_metrics.py
tests/contract/: test_broker_factory.py
tests/e2e/: conftest.py  test_full_cycle.py  test_orchestrator_smoke.py  test_server_e2e.py
tests/fixtures/: sample_trades.json
tests/integration/: test_brokers.py  test_ccxt_adapter_contract.py  test_compose_container.py  test_instance_lock.py  test_orchestrator.py  test_partial_fills_settlement.py  test_pnl_multi_symbol_and_date_cutoff.py  test_reconciliation.py  test_settlement_multiple_orders_and_positions.py  test_storage.py  test_storage_repositories.py  test_trade_flow.py  test_trades_pnl_and_turnover..py
tests/smoke/: test_api.py
tests/unit/: test_api_health_metrics.py  test_api_smoke.py  test_app_tick.py  test_async_bus.py  test_brokers_symbols.py  test_ccxt_exchange.py  test_e2e_backtest.py  test_evaluate_execute.py  test_event_bus.py  test_events_bus.py  test_idempotency.py  test_idempotency_flow.py  test_idempotency_repository.py  test_ids.py  test_metrics_integration.py  test_metrics_snapshot.py  test_place_orde.py  test_policy_decide.py  test_positions_manager.py  test_positions_repository.py  test_protective_exits.py  test_risk_manager.py  test_risk_manager_guards.py  test_risk_rules.py  test_rules.py  test_server_endpoints.py  test_settings_load.py  test_signals.py  test_storage_repos.py  test_symbols.py  test_telegram_profit_positions.py  test_trades_repo.py  test_trades_repository.py  test_utils_ids.py  test_utils_time_retry_circuit.py  test_validators.py
tests_backup/: test_core_decorators_ext.py  test_csv_handler.py  test_exchange_cache_compat.py  test_risk_manager.py  test_state_manager.py
tests_backup/integration/: test_data_pipeline.py
tools/: ci_autofix.py  legacy_main.py  patch_ports_settings.sh
trading/: exchange_client.py  exchange_client.py.py  performance_tracker.py  position_manager.py  position_manager.py.py  profit_manager.py  risk_manager.py
utils/: __init__.py  csv_handler.py  csv_handler.py.py  ids.py  integration_check.py  logging.py  metrics.py  monitoring.py  retry.py  time.py  trading_metrics.py  unified_cache.py
(+399 files in other folders)
